8thSept2026/volAssignment/force-app/main/default/objects/Assigned_Volunteer__c/Assigned_Volunteer__c.object-meta.xml
<CustomObject>
    <label>Assigned Volunteer</label>
    <nameField>
        <label>Assigned Volunteer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assigned Volunteers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>