8thSept2026/volAssignment/force-app/main/default/objects/Assigned_Volunteer__c/fields/Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Date__c</fullName>
    <label>Assigned Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>