8thSept2026/volAssignment/force-app/main/default/objects/Assigned_Volunteer__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Assigned Volunteers</relationshipLabel>
    <relationshipName>Assigned_Volunteers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>