8thSept2026/volAssignment/force-app/main/default/objects/Assigned_Volunteer__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Assigned Volunteers</relationshipLabel>
    <relationshipName>Assigned_Volunteers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>